# orion_alpha

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: orchestrator.py
agent/prompts/: system_prompt.txt
agent/tools/: financials_tool.py  founder_tool.py  funding_tool.py  macro_tool.py  market_tool.py  news_tool.py
api/: main.py  models.py
api/routes/: research.py
data/: ingest.py
frontend/: dashboard.html  index.html  loading.html  package.json
output/: report_builder.py
rag/: pipeline.py  vector_store.py
scorer/: recommendation.py
