[project]
name = "orion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "edgar>=5.6.3",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.1",
    "fredapi>=0.5.2",
    "google-genai>=2.10.0",
    "groq>=0.37.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "numpy>=2.5.0",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "sec-edgar-downloader>=5.1.0",
    "sentence-transformers>=5.6.0",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
